# secscan

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
scripts/: secscan-weekly.sh
secscan/: __init__.py  cli.py  models.py  registry.py  report.py
secscan/checks/: __init__.py  antivirus.py  browser.py  filesystem.py  keylogger.py  malware.py  network.py  persistence.py  processes.py  ssh.py
systemd/: secscan.service  secscan.timer
tests/: test_browser.py  test_malware.py  test_models.py
