[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secscan"
version = "0.1.0"
description = "Host security & spam scanner for Linux desktops"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9",
    "pydantic>=2.5",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
secscan = "secscan.cli:main"

[tool.setuptools.packages.find]
include = ["secscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
